# illustrator_xml_variable_maker

./: .gitignore  README.md  app.spec  main.py  pyproject.toml
.github/workflows/: build.yml
src/core/: converter.py  file_utils.py
src/illustrator_xml/ui/: app.py
ui/: app.py
