[project]
name = "illustrator-xml-variable-maker"
version = "0.1.0"
description = "Tool to generate Illustrator-compatible XML variable files from spreadsheets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
